--- a/Content/BodyMatter.tex
+++ b/Content/BodyMatter.tex
@@ -17,6 +17,7 @@
 \input{Content/Modelling and Simulation}
 \input{Content/Mechanical Assembly}
 \input{Content/Firmware and Testing}
+\input{Content/Conclusion and Future work}
 %\input{Content/Safety}
 %\input{Content/Design}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
