--- a/Content/Modelling and Simulation.tex
+++ b/Content/Modelling and Simulation.tex
@@ -639,8 +639,8 @@ As shown in the figure \ref{fig:Theta and Theta dot}, the theta is the angle bet
 	\caption{Psi and Psi dot}
 	\label{fig:Psi and Psi dot}
 \end{figure}
-
-As shown in the figure \ref{fig:Psi and Psi dot}, the %
+\newpage
+As shown in the figure \ref{fig:Psi and Psi dot}, the
 
 
 %figure for the Gamma
