--- a/Settings/Projekteinstellungen.tex
+++ b/Settings/Projekteinstellungen.tex
@@ -31,7 +31,7 @@
 \newcommand{\Erstpruefer}%          % Enter the name of the first examiner here
 {Prof. Dr.-Ing. Thomas Seel}
 \newcommand{\Zweitpruefer}%         % Enter the name of the second examiner here
-{Prof. Dr.-Ing. Firstname Lastname}
+{Prof. Dr.-Ing. J\"org Wallaschek}
 \newcommand{\Betreuer}%             % Enter the name of the research assistant supervisor here
 {Dustin Lehmann}
 
