--- a/Content/Introduction.tex
+++ b/Content/Introduction.tex
@@ -45,4 +45,4 @@ Development of firmware and software for the robot would be done.
 The robot would be tested and evaluated in simulation and in real life.
 The robot would be tested for its ability to balance and move in different environments.
 The robot would be tested for its ability to perform complex movements and interact with its environment.
-ForThe exploration of experimental methods and different learning algorithms, we need cheep to build and easily be repaired robot.
+For the exploration of experimental methods and different learning algorithms, we need cheep to build and easily be repaired robot.
