--- a/Content/Mechanical Assembly.tex
+++ b/Content/Mechanical Assembly.tex
@@ -181,7 +181,7 @@ Minimum force was applied to the soldering iron to align the thread inserts surf
 %	\label{fig:mountingmotorsonkneewheellinks}
 %\end{figure}
 
-The wheel motors were mounted on the knee wheel links using four screws, as shown in figure \ref{fig:mountingmotorsonkneewheellinks}. The SC040B aluminum extrusion that holds the motor and electronics allows the motor to be mounted on the knee wheel links. free moving air around the motor is important to keep the motor cool and to avoid overheating.
+The wheel motors were mounted on the knee wheel links using four screws, as shown in figure \ref{fig:Mounting motors on knee wheel links}. The SC040B aluminum extrusion that holds the motor and electronics allows the motor to be mounted on the knee wheel links. free moving air around the motor is important to keep the motor cool and to avoid overheating.
 %two subfigures for mounting the motors on the hip knee links
 \begin{figure}[h]
 	\centering
@@ -199,7 +199,7 @@ The wheel motors were mounted on the knee wheel links using four screws, as show
 	\label{fig:Mounting motors on hip knee links}
 \end{figure}
 
-After the XM430-W350 is prepared, the motor is mounted into the dedicated cover as shown in figure \ref{fig:mountingmotorsonhipkneelinks} using 6 main screws, and it can be fixed with extra 10 screws around the cover.
+After the XM430-W350 is prepared, the motor is mounted into the dedicated cover as shown in figure \ref{fig:Mounting motors on hip knee links} using 6 main screws, and it can be fixed with extra 10 screws around the cover.
 %%figure for mounting the motors on the hip knee links
 %\begin{figure}[h]
 %	\centering
@@ -224,7 +224,7 @@ After the XM430-W350 is prepared, the motor is mounted into the dedicated cover 
 	\label{fig:Assembling knee wheel links and hip knee links}
 \end{figure}
 
-The knee wheel links were assembled to the hip knee links using sixteen screws as shown in figure \ref{fig:assemblingkneewheellinksandhipkneelinks} to the Knee motor horns after the motors were mounted in the hip knee links.
+The knee wheel links were assembled to the hip knee links using sixteen screws as shown in figure \ref{fig:Assembling knee wheel links and hip knee links} to the Knee motor horns after the motors were mounted in the hip knee links.
 The screws weren't over tightened to avoid exiting the horn from the other side and touching the motor thrust washer.
 %figure for the assembing the body hip knee links.
 \begin{figure}[h]
