--- a/FrontBackMatter/Abstract.tex
+++ b/FrontBackMatter/Abstract.tex
@@ -15,9 +15,9 @@ The search for the optimal control strategy is still an open research question.
 %% Content
 This thesis presents an in-depth exploration of the dynamic control and design of robotic systems.
 The main focus is on the design and control of a multi-legged robot.
-The robot is designed and built from scratch, including the mechanical and electronic design. A combination of theoretical modeling and practical implementation were used to achieve the desired objectives.
-The research first focuses on the design of the robot, including the mechanical and electronic design.
-The robot is then modeled and simulated in a virtual environment.
+The robot is designed and built from scratch, including the mechanical and electronic design.
+A combination of theoretical modeling and practical implementation were used to achieve the desired objectives.
+The research first focuses on the design of a multi-legged robot that is capable of executing complex maneuvers. The robot is then modeled and simulated in a virtual environment.
 The simulation is used to test and evaluate the robot's performance.
 The robot is then built and tested in real life.
 The research investigates the main elements that affect maneuverability and stability, such as the integration of multiple degrees of freedom, structural integrity, and weight distribution.
